# ai-eng-pi-3

./: .env.example  .gitignore  README.md  instrucciones.md  main.ipynb  main.py  pyproject.toml
agents/: especialistas.py  evaluador.py  orquestador.py
data/: finance_docs.md  hr_docs.md  ti_docs.md
prompts/: especialista.txt  evaluador.txt  orquestador.txt
rag/: vector_store.py
tracing/: langfuse_config.py
